--- a/colorPicker.html
+++ b/colorPicker.html
@@ -14,6 +14,15 @@
         .blue{
             background-color: blue;
         }
+        .yellow{
+            background-color: yellow;
+        }
+        .cyan{
+            background-color: cyan;
+        }
+        .orange{
+            background-color: orange;
+        }
         .pink{
             color: pink;
         }
@@ -22,6 +31,15 @@
         }
         .purple{
             color: purple;
+        }
+        .brown{
+            color: brown;
+        }
+        .white{
+            color: white;
+        }
+        .magenta{
+            color: magenta;
         }
     </style>
 </head>
@@ -37,12 +55,18 @@
             <button id="1">RED</button>
             <button id="2">GREEN</button>
             <button id="3">BLUE</button>
+            <button id="4">YELLOW</button>
+            <button id="5">CYAN</button>
+            <button id="6">ORANGE</button>
         </div>
         <div class="row">
             <h3>Text</h3>
-            <button id="4">PINK</button>
-            <button id="5">TEAL</button>
-            <button id="6">PURPLE</button>
+            <button id="7">PINK</button>
+            <button id="8">TEAL</button>
+            <button id="9">PURPLE</button>
+            <button id="10">BROWN</button>
+            <button id="11">WHITE</button>
+            <button id="12">MAGENTA</button>
         </div>
         <button id="clear">CLEAR</button>
     </div>
@@ -52,10 +76,16 @@
     const red = document.getElementById('1');
     const green = document.getElementById('2');
     const blue = document.getElementById('3');
+    const yellow = document.getElementById('4');
+    const cyan = document.getElementById('5');
+    const orange = document.getElementById('6');
 
-    const pink = document.getElementById('4');
-    const teal = document.getElementById('5');
-    const purple = document.getElementById('6');
+    const pink = document.getElementById('7');
+    const teal = document.getElementById('8');
+    const purple = document.getElementById('9');
+    const brown = document.getElementById('10');
+    const white = document.getElementById('11');
+    const magenta = document.getElementById('12');
 
     const clearButton = document.getElementById('clear')
 
@@ -74,6 +104,21 @@
         content.classList.add('blue')
     })
 
+    yellow.addEventListener('click', function(e){
+        removeBGColor();
+        content.classList.add('yellow')
+    })
+
+    cyan.addEventListener('click', function(e){
+        removeBGColor();
+        content.classList.add('cyan')
+    })
+
+    orange.addEventListener('click', function(e){
+        removeBGColor();
+        content.classList.add('orange')
+    })
+
     pink.addEventListener('click', function(e){
         removeTextColor();
         content.classList.add('pink')
@@ -89,6 +134,21 @@
         content.classList.add('purple')
     })
 
+    brown.addEventListener('click', function(e){
+        removeTextColor();
+        content.classList.add('brown')
+    })
+
+    white.addEventListener('click', function(e){
+        removeTextColor();
+        content.classList.add('white')
+    })
+
+    magenta.addEventListener('click', function(e){
+        removeTextColor();
+        content.classList.add('magenta')
+    })
+
     clearButton.addEventListener('click', function(e){
         removeTextColor();
         removeBGColor();
@@ -98,11 +158,17 @@
         content.classList.remove('red');
         content.classList.remove('green');
         content.classList.remove('blue');
+        content.classList.remove('yellow');
+        content.classList.remove('cyan');
+        content.classList.remove('orange');
     }
     function removeTextColor(){
         content.classList.remove('pink');
         content.classList.remove('teal');
         content.classList.remove('purple');
+        content.classList.remove('brown');
+        content.classList.remove('white');
+        content.classList.remove('magenta');
     }
 </script>
 </body>
