--- a/colorPicker.html
+++ b/colorPicker.html
@@ -5,6 +5,9 @@
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        .content{
+            width: 600px;
+        }
         .red{
             background-color: red;
         }
