--- a/changeContents.html
+++ b/changeContents.html
@@ -61,7 +61,7 @@
         } else{
             full.classList.add("hidden")
         }
-        full.textContent= `Hello ${fullName}!`
+        full.textContent= `${fullName}!`
     }
 </script>
 </body>
