--- a/groceryList.html
+++ b/groceryList.html
@@ -16,28 +16,23 @@
       </div>
     </div>
     <button id="Add">Add Item</button>
-    <button id="clear">Clear</button>
     <div  id="items"></div>
   </div>
 </div>
 <script>
   const grocery = document.getElementById('item');
   const full = document.getElementById('items');
-  const clearButton = document.getElementById('clear')
 
   const addButton = document.getElementById('Add');
-
-  clearButton.addEventListener('click', function(e){
-    grocery.value = " ";
-    const ele = document.querySelector('li');
-    ele.remove();
-  })
 
   addButton.addEventListener('click', listCreator)
 
   function listCreator() {
     let item = grocery.value;
-    const ele = document.createElement('li');
+    let ele = document.createElement('li');
+    ele.addEventListener('click', function(e){
+      ele.remove();
+    })
     ele.innerHTML = item;
     grocery.value= ' '
     full.insertAdjacentElement("afterbegin", ele);
