--- a/cardClickGame.html
+++ b/cardClickGame.html
@@ -35,6 +35,11 @@
 <body>
 <div class="container">
     <div class="content">
+        <h2 id="scoreBoard">Score: 0</h2>
+        <p id="p">Aim For A Lower Score!!!</p>
+        <div id="image">
+
+        </div>
         <div class="cardList">
 
         </div>
