--- a/cardClickGame.html
+++ b/cardClickGame.html
@@ -19,6 +19,7 @@
             align-content: center;
             font-size: 26px;
             color: white;
+            transition: 0.3s;
         }
         .active{
             background-color: navy;
